tests/paczka1/fuzzy1/70055980.err
Error in line 2: S30 S377 98,7
Error in line 9: 0lkcjHJH2 A915 98,5
Error in line 17: DoJPuA S30 22,6
Error in line 25: yAK A844 68,4
Error in line 31: DoJPuA S30 67,0
Error in line 23: 0lkcjHJH2 A915 77,4
